<resources>
    <string name="app_name">SmartHub</string>
    <string name="smartHubLogo">SmartHubLogo</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="bmi_calculator_capital">BMI CALCULATOR</string>
    <string name="notes">NOTES</string>
    <string name="clock">CLOCK</string>
    <string name="calculator">CALCULATOR</string>
    <string name="flashlight">FLASHLIGHT</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="fx_converter">FX Converter</string>
    <string name="compass">COMPASS</string>
    <string name="calendar">Calendar</string>
    <string name="units_converter">Units Converter</string>
    <string name="news">NEWS</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="image_reaction">Image Reaction</string>
    <string name="calculate_bmi">CALCULATE BMI</string>
    <string name="result">RESULT</string>
    <string name="weight">Weight</string>
    <string name="kg">KG</string>
    <string name="height">Height</string>
    <string name="cm">CM</string>
    <string name="description">Description</string>
    <string name="save_note">Save Note</string>
    <string name="title">Title</string>
    <string name="analog_clock">Analog Clock</string>
    <string name="digital_clock">Digital Clock</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="comma">.</string>
    <string name="equal">=</string>
    <string name="power_button">Power Button</string>
    <string name="start_scanning">Start Scanning.....</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="degrees">Degrees:</string>
    <string name="left_arrow_icon">LeftArrowIcon</string>
    <string name="right_arrow_icon">RightArrowIcon</string>
    <string name="month_title">Feb 2024</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="kilometre">Kilometre</string>
    <string name="meter">Meter</string>
    <string name="centimeter">Centimeter</string>
    <string name="millimetre">Millimetre</string>
    <string name="micrometre">Micrometre</string>
    <string name="nanometre">Nanometre</string>
    <string name="mile">Mile</string>
    <string name="yard">Yard</string>
    <string name="foot">Foot</string>
    <string name="inch">Inch</string>
    <string name="enter_a_number">Enter a Number!</string>
    <string name="search">Search</string>
    <string name="google_search">Google Search…</string>
    <string name="github_project">GitHub Project</string>
    <string name="convert_from">Convert From:</string>
    <string name="convert_to">Convert To:</string>
    <string name="select_country">Select Country</string>
    <string name="amount_to_convert">Amount To Convert</string>
    <string name="conversion_rate">Conversion Rate</string>
    <string name="convert">Convert</string>

</resources>