<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculatorActivity"
    android:background="@color/window_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:padding="30dp"
        android:background="@color/io_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="30sp"
            android:textColor="@color/white"
            tools:text="0+0+0"/>

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="50sp"
            android:textColor="@color/orange"
            tools:text="00"/>

    </LinearLayout>
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <!-- 1st Row-->
        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/ac"
                android:textColor="@color/orange"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonErase"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/c"
                android:textColor="@color/orange"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPercent"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/percent"
                android:textColor="@color/orange"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDivision"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/division"
                android:textColor="@color/orange"/>
        </TableRow>

        <!-- 2nd Row-->
        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_7"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_8"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_9"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMultiply"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/multiply"
                android:textColor="@color/orange"/>
        </TableRow>

        <!-- 3rd Row-->
        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_4"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_5"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_6"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSubtraction"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/minus"
                android:textColor="@color/orange"/>
        </TableRow>

        <!-- 4th Row-->
        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_2"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_3"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddition"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/plus"
                android:textColor="@color/orange"/>
        </TableRow>

        <!-- 5th Row-->
        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_0"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonComma"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/comma"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonEquals"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="@color/orange"
                style="@style/Button_Style"
                android:text="@string/equal"/>
        </TableRow>
        
    </TableLayout>
</LinearLayout>