<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/complementaryColor"
    tools:context=".NotesActivity">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:background="@drawable/notes_edittext_background"
        android:layout_height="46dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:hint="@string/title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/notes_edittext_background"
        android:textColor="@color/black"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:id="@+id/contentEditText"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_note"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/notesTextView"/>

    <ScrollView
        android:id="@+id/notesScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/notesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>
</LinearLayout>